Ordenando carpetas y creando la pagina de login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/home/isaac/proyects/siac_sms_gateway/linux"
+    "cmake.sourceDirectory": "/home/isaac/proyects/siac_sms_gateway/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
