--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   telephony: ^0.2.0
   http: ^0.13.5
+  url_launcher: ^6.1.10
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
@@ -62,7 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
