--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             </intent-filter>
         </receiver>
 
-        <!-- <service android:name="com.example.siac_sms_gateway.SmsReceiverService" /> -->
+        <service android:name=".SmsReceiverService" />
 
     </application>
 </manifest>
